src/language/Parser.zig
// Copyright (c) 2022-2024, sin-ack <sin-ack@protonmail.com>
//
// SPDX-License-Identifier: GPL-3.0-only

const std = @import("std");
const tracy = @import("tracy");
const Allocator = std.mem.Allocator;

const AST = @import("./ast.zig");
const Diagnostics = @import("./Diagnostics.zig");
const Tokenizer = @import("./Tokenizer.zig");
const Token = @import("./Token.zig");
const Location = @import("./Location.zig");

allocator: Allocator,
buffer: [:0]const u8,
diagnostics: Diagnostics,

tokens: std.MultiArrayList(struct {
    tag: Token.Tag,
    start: usize,
}),
token_tags: []Token.Tag = undefined,
token_starts: []usize = undefined,
token_index: TokenIndex,
line_offsets: std.ArrayListUnmanaged(usize),

pub const ParseError = Allocator.Error;
const Parser = @This();
const TokenIndex = enum(usize) { _ };

pub fn createFromFile(allocator: Allocator, file_path: []const u8) !*Parser {
    const cwd = std.fs.cwd();
    const file = try cwd.openFile(file_path, .{});
    defer file.close();

    const file_contents = try file.readToEndAllocOptions(allocator, std.math.maxInt(usize), null, .of(u8), 0);
    errdefer allocator.free(file_contents);

    var self = try allocator.create(Parser);
    errdefer allocator.destroy(self);
    try self.init(allocator, file_contents, true);
    return self;
}

pub fn createFromString(allocator: Allocator, contents: []const u8) !*Parser {
    const contents_copy = try allocator.dupeZ(u8, contents);
    errdefer allocator.free(contents_copy);

    var self = try allocator.create(Parser);
    errdefer allocator.destroy(self);
    try self.init(allocator, contents_copy, false);
    return self;
}

fn init(self: *Parser, allocator: Allocator, buffer: [:0]const u8, from_file: bool) !void {
    self.* = .{
        .allocator = allocator,
        .buffer = buffer,
        .token_index = @enumFromInt(0),
        .tokens = .{},
        .line_offsets = .{},
        .diagnostics = try Diagnostics.init(allocator),
    };
    errdefer self.diagnostics.deinit();
    errdefer self.tokens.deinit(allocator);
    errdefer self.line_offsets.deinit(allocator);

    var tokenizer = Tokenizer.init(self.buffer);
    if (from_file) {
        tokenizer.skipShebangFromStart();
    }

    while (true) {
        const token = tokenizer.next();
        try self.tokens.append(allocator, .{
            .tag = token.tag,
            .start = token.location.start,
        });

        if (token.tag == .EOF or token.tag == .Invalid)
            break;
    }

    self.token_tags = self.tokens.items(.tag);
    self.token_starts = self.tokens.items(.start);

    {
        try self.line_offsets.append(allocator, 0);
        var offset: usize = 0;
        var will_insert_newline = false;

        while (offset < self.buffer.len) : (offset += 1) {
            if (will_insert_newline) {
                try self.line_offsets.append(allocator, offset);
                will_insert_newline = false;
            }

            if (self.buffer[offset] == '\n') {
                will_insert_newline = true;
            }
        }
    }
}

fn deinit(self: *Parser) void {
    self.line_offsets.deinit(self.allocator);
    self.tokens.deinit(self.allocator);
    self.allocator.free(self.buffer);
    self.diagnostics.deinit();
}

pub fn destroy(self: *Parser) void {
    self.deinit();
    self.allocator.destroy(self);
}

/// Peek at the current token.
fn peek(self: *Parser) Token.Tag {
    const token_index = @intFromEnum(self.token_index);
    if (token_index >= self.token_tags.len) {
        return .EOF;
    }
    return self.token_tags[token_index];
}

/// Move the token index forward and return the previous token index.
/// If the last token had already been consumed, returns the index of the last token.
fn consume(self: *Parser) TokenIndex {
    const result = @intFromEnum(self.token_index);
    if (result < self.token_tags.len) {
        self.token_index = @enumFromInt(result + 1);
    }
    return @enumFromInt(result);
}

/// Try to consume the given token, or return null.
fn tryConsume(self: *Parser, tag: Token.Tag) ?TokenIndex {
    if (self.tokenAt(self.token_index) == tag)
        return self.consume();
    return null;
}

/// Expect the given token and try to consume it, or produce a diagnostic and return null.
fn expectToken(self: *Parser, expected: Token.Tag) !?TokenIndex {
    return self.expectTokenContext(expected, null);
}

/// Expect the given token and try to consume it, or produce a diagnostic and return null.
/// If `context` is non-null, it will be included in the diagnostic message after the expected token,
/// i.e. "Expected 'foo' <context>, found 'bar'".
fn expectTokenContext(self: *Parser, expected: Token.Tag, context: ?[]const u8) !?TokenIndex {
    const actual = self.peek();
    if (actual != expected) {
        try self.diagnostics.reportDiagnosticFormatted(
            .Error,
            self.offsetToLocation(self.tokenStartAt(self.token_index)),
            "Expected '{s}'{s}{s}, found '{s}'",
            .{ expected.symbol(), if (context != null) " " else "", context orelse "", actual.symbol() },
        );
        return null;
    }
    return self.consume();
}

/// Assert that the current token is the given tag.
/// When it isn't, panics when runtime safety is enabled and causes UB otherwise.
/// Only used for checking invariants in debug builds.
fn assertToken(self: *Parser, tag: Token.Tag) void {
    std.debug.assert(self.peek() == tag);
}

/// Turn an offset into a line-and-column location.
pub fn offsetToLocation(self: Parser, offset: usize) Location {
    var line: usize = 1;
    var line_start: usize = undefined;
    var line_end: usize = undefined;
    var did_find_line = false;

    std.debug.assert(offset <= self.buffer.len);

    while (line < self.line_offsets.items.len) : (line += 1) {
        const line_offset = self.line_offsets.items[line];
        if (offset < line_offset) {
            line_start = self.line_offsets.items[line - 1];
            line_end = line_offset - 1; // Get rid of newline
            did_find_line = true;
            break;
        }
    }

    if (!did_find_line) {
        // We are on the very last line.
        line_start = self.line_offsets.items[line - 1];
        line_end = self.buffer.len;
        if (line_end > 0 and self.buffer[line_end - 1] == '\n')
            line_end -= 1;
    }

    return Location{
        .line = line,
        .column = offset - line_start + 1,
        .line_start = line_start,
        .line_end = line_end,
    };
}

/// Get a non-owning slice of the identifier at the given token index.
/// The token at the given index must be an identifier.
/// The returned slice will be at least one byte long.
fn getIdentifierSlice(self: Parser, index: TokenIndex) []const u8 {
    std.debug.assert(self.tokenAt(index) == .Identifier);

    const start = self.tokenStartAt(index);
    const next_start = self.tokenStartAt(@enumFromInt(@intFromEnum(index) + 1));
    var end = next_start - 1;

    while (true) {
        switch (self.buffer[end]) {
            'a'...'z', 'A'...'Z', '0'...'9', '_' => break,
            else => end -= 1,
        }
    }

    // The end needs to be exclusive.
    end += 1;

    // Can't have 0-length identifiers.
    std.debug.assert(end > start);
    return self.buffer[start..end];
}

/// Copy the identifier at the given token index.
fn getIdentifierCopy(self: Parser, index: TokenIndex) Allocator.Error![]const u8 {
    const slice = self.getIdentifierSlice(index);
    return try self.allocator.dupe(u8, slice);
}

/// Get a non-owning slice of the keyword at the given token index.
fn getKeywordSlice(self: Parser, index: TokenIndex) []const u8 {
    std.debug.assert(self.tokenAt(index) == .FirstKeyword or self.tokenAt(index) == .RestKeyword);

    const start = self.tokenStartAt(index);
    const next_start = self.tokenStartAt(@enumFromInt(@intFromEnum(index) + 1));
    var end = next_start;

    while (self.buffer[end] != ':') : (end -= 1) {}
    // The end needs to be exclusive.
    end += 1;

    // A keyword must be at least one character long, plus the colon.
    std.debug.assert(end - start >= 2);
    return self.buffer[start..end];
}

/// Ensure that the current identifier token isn't primitive (doesn't start with `_`).
/// Returns true if the identifier is non-primitive, false otherwise.
fn expectNonPrimitiveIdentifier(self: *Parser) !bool {
    self.assertToken(.Identifier);

    const token_start = self.tokenStartAt(self.token_index);
    if (self.buffer[token_start] == '_') {
        try self.diagnostics.reportDiagnostic(
            .Error,
            self.offsetToLocation(self.tokenStartAt(self.token_index)),
            "Expected non-primitive identifier",
        );
        return false;
    }

    return true;
}

/// Get the token at the given index.
fn tokenAt(self: Parser, index: TokenIndex) Token.Tag {
    return self.token_tags[@intFromEnum(index)];
}

/// Get the token start offset at the given index.
fn tokenStartAt(self: Parser, index: TokenIndex) usize {
    return self.token_starts[@intFromEnum(index)];
}

// <Script> ::= <MethodSlotList>? <StatementList>? <Whitespace>
pub fn parseScript(self: *Parser) ParseError!?AST.ScriptNode {
    const tracy_zone = tracy.trace(@src());
    defer tracy_zone.end();

    const slots = try self.parseSlotList(.Method);
    errdefer {
        for (slots) |*slot| {
            slot.deinit(self.allocator);
        }
        self.allocator.free(slots);
    }

    const statements = try self.parseStatementList(.DisallowNonlocalReturns, .EOF);

    return AST.ScriptNode{
        .range = .{
            .start = 0,
            .end = self.buffer.len,
        },
        .slots = slots,
        .statements = statements,
    };
}

// std.io.getStdErr().writer().writeByteNTimes(' ', self.depth * 2) catch unreachable;
// std.debug.print(@src().fn_name ++ ": self.peek() = {s}, self.token_index = {}\n", .{ @tagName(self.peek()), @intFromEnum(self.token_index) });
// self.depth += 1;
// defer self.depth -= 1;

// <StatementList> ::= <Expression> ("." <Expression>)* "."?
// <BlockStatementList> ::= (<Expression> ("." <Expression>)*)? "^"? <Expression> "."?
const StatementListNonlocalReturns = enum { AllowNonlocalReturns, DisallowNonlocalReturns };
fn parseStatementList(self: *Parser, nonlocal_returns: StatementListNonlocalReturns, closing_token: Token.Tag) ParseError!AST.StatementList.Ref {
    const tracy_zone = tracy.trace(@src());
    defer tracy_zone.end();

    var statements = std.ArrayList(AST.ExpressionNode).init(self.allocator);
    defer {
        for (statements.items) |*expression| {
            expression.deinit(self.allocator);
        }
        statements.deinit();
    }

    var nonlocal_return_start: ?usize = null;
    if (self.tryConsume(closing_token) == null) parse_first_statement: {
        {
            if (self.peek() == .Cap and nonlocal_returns == .AllowNonlocalReturns) {
                nonlocal_return_start = self.tokenStartAt(self.consume());
            }

            var expression = (try self.parseExpression(.WithParenExpr)) orelse break :parse_first_statement;
            errdefer expression.deinit(self.allocator);

            try statements.append(expression);
        }

        while (self.tryConsume(.Period)) |_| {
            if (self.peek() == closing_token) {
                break;
            }

            if (nonlocal_return_start) |start| {
                try self.diagnostics.reportDiagnostic(
                    .Error,
                    self.offsetToLocation(start),
                    "Non-local return must be the last statement in blocks",
                );
            }

            if (self.peek() == .Cap and nonlocal_returns == .AllowNonlocalReturns) {
                nonlocal_return_start = self.tokenStartAt(self.consume());
            }

            var expression = (try self.parseExpression(.WithParenExpr)) orelse break;
            errdefer expression.deinit(self.allocator);

            try statements.append(expression);
        }

        _ = try self.expectTokenContext(closing_token, "after statement list");
    }

    if (nonlocal_return_start) |start| {
        // Turn the last expression into a non-local return.
        var last_expression = statements.items[statements.items.len - 1];

        const return_node = try self.allocator.create(AST.ReturnNode);
        // NOTE: No errdefer here as owned_statements will handle the error condition.
        return_node.* = .{
            .expression = last_expression,
            .range = .{ .start = start, .end = last_expression.range().end },
        };

        statements.items[statements.items.len - 1] = AST.ExpressionNode{ .Return = return_node };
    }

    const owned_statements = try statements.toOwnedSlice();
    errdefer {
        for (statements.items) |*expression| {
            expression.deinit(self.allocator);
        }
        self.allocator.free(owned_statements);
    }

    return AST.StatementList.create(self.allocator, owned_statements);
}

// <SlotsSlotList> ::= "|" "|" | "|" <SlotsSlot> ("." <SlotsSlot>)* "."? "|"
// <MethodSlotList> ::= "|" "|" | "|" <MethodSlot> ("." <MethodSlot>)* "."? "|"
// <BlockSlotList> ::= "|" "|" | "|" <BlockSlot> ("." <BlockSlot>)* (".")? "|"
const SlotType = enum { Slots, Method, Block };
fn parseSlotList(self: *Parser, slot_type: SlotType) ParseError![]AST.SlotNode {
    const tracy_zone = tracy.trace(@src());
    defer tracy_zone.end();

    _ = self.tryConsume(.Pipe) orelse return &.{};
    // Empty slot list.
    if (self.tryConsume(.Pipe)) |_| return &.{};

    var slots = std.ArrayList(AST.SlotNode).init(self.allocator);
    defer {
        for (slots.items) |*slot| {
            slot.deinit(self.allocator);
        }
        slots.deinit();
    }

    {
        var slot = (try self.parseSlot(slot_type)) orelse return slots.toOwnedSlice();
        errdefer slot.deinit(self.allocator);

        try slots.append(slot);
    }

    while (self.tryConsume(.Period)) |_| {
        if (self.peek() == .Pipe) {
            break;
        }

        var slot = (try self.parseSlot(slot_type)) orelse return slots.toOwnedSlice();
        errdefer slot.deinit(self.allocator);

        try slots.append(slot);
    }

    _ = try self.expectTokenContext(.Pipe, "after slot list");
    return slots.toOwnedSlice();
}

// <SlotsSlot> ::= <CommonSlot> | <NonPrimitiveIdentifier> "*" ("=" | "<-") <Expression>
// <BlockSlot> ::= <CommonSlot> | ":" <NonPrimitiveIdentifier>
// <MethodSlot> ::= <CommonSlot>
fn parseSlot(self: *Parser, slot_type: SlotType) ParseError!?AST.SlotNode {
    const tracy_zone = tracy.trace(@src());
    defer tracy_zone.end();

    const start = self.tokenStartAt(self.token_index);

    return switch (slot_type) {
        .Slots, .Method => blk: {
            const current = self.peek();
            if (current == .Identifier) {
                if (!try self.expectNonPrimitiveIdentifier()) return null;
                const identifier_token = self.consume();

                // Parent slot
                if (self.tryConsume(.Asterisk)) |_| {
                    if (slot_type == .Method) {
                        try self.diagnostics.reportDiagnostic(
                            .Error,
                            self.offsetToLocation(start),
                            "Method slots can't have parent slots",
                        );
                        return null;
                    }

                    const is_mutable = if (self.peek() == .Equals)
                        false
                    else if (self.peek() == .Arrow)
                        true
                    else {
                        try self.diagnostics.reportDiagnostic(
                            .Error,
                            self.offsetToLocation(self.tokenStartAt(self.token_index)),
                            "Expected '=' or '<-' after '*' in slot",
                        );
                        return null;
                    };
                    _ = self.consume();

                    var expression = (try self.parseExpression(.WithParenExpr)) orelse return null;
                    errdefer expression.deinit(self.allocator);

                    const end = self.tokenStartAt(self.token_index);
                    break :blk AST.SlotNode{
                        .range = .{
                            .start = start,
                            .end = end,
                        },
                        .name = try self.getIdentifierCopy(identifier_token),
                        .value = expression,

                        .is_parent = true,
                        .is_mutable = is_mutable,
                        .is_argument = false,
                    };
                }

                break :blk self.parseSlotCommonIdentifier(identifier_token);
            }

            break :blk self.parseSlotCommon();
        },
        .Block => blk: {
            // Argument slot
            if (self.tryConsume(.Colon)) |_| {
                if (self.peek() != .Identifier) {
                    try self.diagnostics.reportDiagnostic(
                        .Error,
                        self.offsetToLocation(self.tokenStartAt(self.token_index)),
                        "Expected identifier after ':' in argument slot",
                    );
                    return null;
                }
                if (!try self.expectNonPrimitiveIdentifier()) return null;

                const identifier_token = self.consume();

                const end = self.tokenStartAt(self.token_index);
                break :blk AST.SlotNode{
                    .range = .{
                        .start = start,
                        .end = end,
                    },
                    .name = try self.getIdentifierCopy(identifier_token),
                    .value = null,

                    .is_parent = false,
                    .is_mutable = true,
                    .is_argument = true,
                };
            }

            break :blk self.parseSlotCommon();
        },
    };
}

// <CommonSlot> ::= <NonPrimitiveIdentifier> "=" <MethodOrExpression>
//                | <NonPrimitiveIdentifier> "<-" <Expression>
//                | <NonPrimitiveIdentifier>
//                | <MethodSlotName> "=" <Method>
fn parseSlotCommon(self: *Parser) ParseError!?AST.SlotNode {
    const tracy_zone = tracy.trace(@src());
    defer tracy_zone.end();

    const start = self.tokenStartAt(self.token_index);

    const current = self.peek();
    if (current == .Identifier) {
        if (!try self.expectNonPrimitiveIdentifier()) return null;
        const identifier_index = self.consume();
        return self.parseSlotCommonIdentifier(identifier_index);
    }

    // Method slot. The name is either a binary or keyword message.
    if (!(current == .FirstKeyword or current.isOperator())) {
        try self.diagnostics.reportDiagnostic(
            .Error,
            self.offsetToLocation(start),
            "Expected identifier, keyword or operator for slot name",
        );
        return null;
    }

    var argument_names = std.ArrayList([]const u8).init(self.allocator);
    var did_transfer_argument_names = false;
    defer {
        if (!did_transfer_argument_names) {
            for (argument_names.items) |argument_name| {
                self.allocator.free(argument_name);
            }
        }
        argument_names.deinit();
    }

    const slot_name = (try self.parseMethodSlotName(&argument_names)) orelse return null;
    errdefer self.allocator.free(slot_name);
    _ = try self.expectTokenContext(.Equals, "after method slot name");

    const method = (try self.parseMethod(argument_names.items, .DisallowParentSlots)) orelse return null;
    did_transfer_argument_names = true;

    const end = self.tokenStartAt(self.token_index);
    return AST.SlotNode{
        .range = .{
            .start = start,
            .end = end,
        },
        .name = slot_name,
        .value = .{ .Object = method },

        .is_parent = false,
        .is_mutable = false,
        .is_argument = false,
    };
}

// <MethodSlotName> ::= <FirstKeywordName> <NonPrimitiveIdentifier> (<RestKeywordName> <NonPrimitiveIdentifier>)*
//                    | <BinaryOp>+ <NonPrimitiveIdentifier>
fn parseMethodSlotName(self: *Parser, argument_names: *std.ArrayList([]const u8)) ParseError!?[]const u8 {
    const tracy_zone = tracy.trace(@src());
    defer tracy_zone.end();

    var slot_name = std.ArrayList(u8).init(self.allocator);
    defer slot_name.deinit();

    if (self.peek() == .FirstKeyword) {
        try slot_name.appendSlice(self.getKeywordSlice(self.consume()));

        var identifier_index = (try self.expectToken(.Identifier)) orelse return null;
        var identifier = try self.getIdentifierCopy(identifier_index);
        errdefer self.allocator.free(identifier);
        try argument_names.append(identifier);

        while (self.peek() == .RestKeyword) {
            try slot_name.appendSlice(self.getKeywordSlice(self.consume()));

            identifier_index = (try self.expectToken(.Identifier)) orelse return null;
            identifier = try self.getIdentifierCopy(identifier_index);
            errdefer self.allocator.free(identifier);
            try argument_names.append(identifier);
        }

        return try slot_name.toOwnedSlice();
    }

    std.debug.assert(self.peek().isOperator());

    while (self.peek().isOperator()) {
        try slot_name.appendSlice(self.peek().symbol());
        _ = self.consume();
    }

    const identifier_index = (try self.expectToken(.Identifier)) orelse return null;
    const identifier = try self.getIdentifierCopy(identifier_index);
    errdefer self.allocator.free(identifier);
    try argument_names.append(identifier);

    return try slot_name.toOwnedSlice();
}

fn parseSlotCommonIdentifier(self: *Parser, identifier_index: TokenIndex) ParseError!?AST.SlotNode {
    const tracy_zone = tracy.trace(@src());
    defer tracy_zone.end();

    const start = self.tokenStartAt(identifier_index);

    // Constant slot. Can be either a method or an expression.
    if (self.tryConsume(.Equals)) |_| {
        const expression = try self.parseMethodOrExpression() orelse return null;
        const end = self.tokenStartAt(self.token_index);

        return AST.SlotNode{
            .range = .{
                .start = start,
                .end = end,
            },
            .name = try self.getIdentifierCopy(identifier_index),
            .value = expression,

            .is_parent = false,
            .is_mutable = false,
            .is_argument = false,
        };
    }

    // Assignable slot. Can't hold a method (at least syntactically).
    if (self.tryConsume(.Arrow)) |_| {
        const expression = try self.parseExpression(.WithParenExpr) orelse return null;
        const end = self.tokenStartAt(self.token_index);

        return AST.SlotNode{
            .range = .{
                .start = start,
                .end = end,
            },
            .name = try self.getIdentifierCopy(identifier_index),
            .value = expression,

            .is_parent = false,
            .is_mutable = true,
            .is_argument = false,
        };
    }

    // Assignable slot with no value.
    const end = self.tokenStartAt(self.token_index);
    return AST.SlotNode{
        .range = .{
            .start = start,
            .end = end,
        },
        .name = try self.getIdentifierCopy(identifier_index),
        .value = null,

        .is_parent = false,
        .is_mutable = true,
        .is_argument = false,
    };
}

// <MethodOrExpression> ::= <NonParenthesizedExpression> | <SendToParenthesizedExpression> | <Method>
// <SendToParenthesizedExpression> ::= "(" <Expression> ")" <MessageSend>
fn parseMethodOrExpression(self: *Parser) ParseError!?AST.ExpressionNode {
    const tracy_zone = tracy.trace(@src());
    defer tracy_zone.end();

    if (self.peek() != .ParenOpen) {
        // Simple case: just a (non-parenthesized) expression.
        return self.parseExpression(.WithoutParenExpr);
    }

    const start = self.token_index;
    // The ugliest part of Self syntax... Since method objects just look like
    // slots objects with statements added, we have no idea whether we need to
    // parse what's ahead of us as a slots object or as a method object until we
    // see what's after the closing parenthesis. We parse a "method" first while
    // allowing parent slots, and then check what comes after; if it looks like
    // a message send, we reset the parser state and parse a slots object.
    // Otherwise, we reset the parser state and parse a method object, this time
    // disallowing parent slots.
    //
    // Even worse, parenthesized expressions are really just single-statement
    // method objects, so we need to check for that as well. In that case we simply
    // extract the expression from the method object.
    {
        const method = (try self.parseMethod(&.{}, .AllowParentSlots)) orelse return null;
        defer method.destroy(self.allocator);

        // If what's in front of us looks like a message send...
        if (self.peek() == .FirstKeyword or self.peek().isOperator() or self.peek() == .Identifier) {
            // ...then this "method" must either be a "single-statement method object"
            // (i.e. parenthesized expression) or a slots object with no statements.
            var expression = if (method.slots.len == 0 and method.statements.value.statements.len == 1) blk: {
                const expression = method.statements.value.statements[0];
                // Prevent the method from freeing the expression.
                method.statements.value.statements.len = 0;
                break :blk expression;
            } else if (method.statements.value.statements.len == 0) blk: {
                self.token_index = start;
                const slots = (try self.parseSlotsObject()) orelse return null;
                break :blk AST.ExpressionNode{ .Object = slots };
            } else {
                try self.diagnostics.reportDiagnostic(
                    .Error,
                    self.offsetToLocation(method.range.start),
                    "Messages can only be sent to expressions, found method",
                );
                method.destroy(self.allocator);
                return null;
            };

            errdefer expression.deinit(self.allocator);
            return (try self.maybeParseMessageSend(expression)) orelse null;
        }

        // Alternatively, if the "method" has no statements, then assume it's a
        // slots object.
        if (method.statements.value.statements.len == 0) {
            self.token_index = start;
            const slots = (try self.parseSlotsObject()) orelse return null;
            return AST.ExpressionNode{ .Object = slots };
        }
    }

    // Otherwise, it's just a method object. Parse it properly this time.
    self.token_index = start;
    const method = (try self.parseMethod(&.{}, .DisallowParentSlots)) orelse return null;
    return AST.ExpressionNode{ .Object = method };
}

/// Parse a method. The strings in `argument_names` will be owned by the returned method object.
// <Method> ::= "(" <MethodSlotList>? <StatementList>? ")"
const MethodParentSlotPermissiveness = enum { AllowParentSlots, DisallowParentSlots };
fn parseMethod(self: *Parser, argument_names: []const []const u8, permissiveness: MethodParentSlotPermissiveness) ParseError!?*AST.ObjectNode {
    const tracy_zone = tracy.trace(@src());
    defer tracy_zone.end();

    const start = self.tokenStartAt(self.consume());

    var slots = try std.ArrayList(AST.SlotNode).initCapacity(self.allocator, argument_names.len);
    defer {
        for (slots.items) |*slot| {
            slot.deinit(self.allocator);
        }
        slots.deinit();
    }

    // TODO: Check if the argument names are unique.
    // TODO: Check for clobbering of argument slots by non-argument slots.
    for (argument_names) |argument_name| {
        const argument_slot = AST.SlotNode{
            .range = .{
                .start = 0,
                .end = 0,
            },
            .name = argument_name,
            .value = null,

            .is_parent = false,
            .is_mutable = true,
            .is_argument = true,
        };
        try slots.append(argument_slot);
    }

    {
        const nonargument_slots = try self.parseSlotList(if (permissiveness == .AllowParentSlots) .Slots else .Method);
        defer self.allocator.free(nonargument_slots);
        errdefer {
            for (nonargument_slots) |*slot| {
                slot.deinit(self.allocator);
            }
        }

        try slots.appendSlice(nonargument_slots);
    }

    const slots_slice = try slots.toOwnedSlice();
    errdefer self.allocator.free(slots_slice);

    const statements = try self.parseStatementList(.DisallowNonlocalReturns, .ParenClose);
    errdefer statements.unrefWithAllocator(self.allocator);

    const end = self.tokenStartAt(self.token_index);
    const method_node = try self.allocator.create(AST.ObjectNode);
    method_node.* = .{
        .range = .{
            .start = start,
            .end = end,
        },
        .slots = slots_slice,
        .statements = statements,
    };

    return method_node;
}

// <Expression> ::= <KeywordExpression> (";" <MessageSend>)*
// <NonParenthesizedExpression> ::= <NonParenthesizedKeywordExpression> (";" <MessageSend>)*
fn parseExpression(self: *Parser, mode: PrimaryMode) ParseError!?AST.ExpressionNode {
    const tracy_zone = tracy.trace(@src());
    defer tracy_zone.end();

    var expression = (try self.parseKeywordExpression(mode)) orelse return null;
    // NOTE: `maybeParseMessageSend` will free `expression` if it fails.

    while (self.tryConsume(.Semicolon)) |_| {
        expression = (try self.maybeParseMessageSend(expression)) orelse return null;
    }
    return expression;
}

// <KeywordExpression> ::= (<KeywordSend> | <BinarySend> <KeywordSend>? | <Primary> <MessageSend>?)
// <NonParenthesizedKeywordExpression> ::= (<KeywordSend> | <BinarySend> <KeywordSend>? | <PrimaryNoParenExpr> <MessageSend>?)
fn parseKeywordExpression(self: *Parser, mode: PrimaryMode) ParseError!?AST.ExpressionNode {
    const tracy_zone = tracy.trace(@src());
    defer tracy_zone.end();

    const current_tag = self.peek();
    return if (current_tag == .FirstKeyword)
        (try self.parseKeywordSend(null)) orelse return null
    else if (current_tag.isOperator()) blk: {
        var primary = (try self.parseBinarySend(null, null)) orelse return null;
        errdefer primary.deinit(self.allocator);

        if (self.peek() == .FirstKeyword) {
            primary = (try self.parseKeywordSend(primary)) orelse {
                primary.deinit(self.allocator);
                return null;
            };
        }
        break :blk primary;
    } else blk: {
        var primary = (try self.parsePrimary(mode)) orelse return null;
        errdefer primary.deinit(self.allocator);

        // NOTE: `maybeParseMessageSend` will free `primary` if it fails.
        break :blk (try self.maybeParseMessageSend(primary)) orelse return null;
    };
}
